# dbus-stream

./: Cargo.toml  README.md  plan.txt  rustfmt.toml
dbus-stream/: Cargo.toml
dbus-stream/src/: connection.rs  lib.rs  message_protocol.rs  type_system.rs
dbus-stream/src/message_protocol/: body.rs  header.rs
dbus-stream/src/message_protocol/header/: header_field.rs
dbus-stream/src/type_system/: marshal.rs  marshall.rs  signature.rs  types.rs  unmarshal.rs  unmarshall.rs
dbus-stream/src/type_system/signature/: signature_trait.rs
dbus-stream/src/type_system/unmarshal/: decoder.rs  input.rs  parsers.rs
playground/: Cargo.toml
playground/src/: main.rs
src/: connection.rs  lib.rs  main.rs  message_protocol.rs  type_system.rs
src/message_protocol/: body.rs  header.rs
src/message_protocol/header/: header_field.rs
src/type_system/: marker.rs  marshall.rs  types.rs  unmarshall.rs
