[package]
name = "dbus-stream"
version = "0.0.1"
authors = ["Asger Juul Brunshøj <asgerbrunshoj@gmail.com>"]
edition = "2018"

[dependencies]
smol = "1.2.5"
thiserror = "1.0"
hex = "0.4.2"
log = "0.4"
nom = "6.1"
lazy_static = "1.4"

[target.'cfg(unix)'.dependencies]
nix = "0.20"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.5"
windows-acl = "0.3.0"
